--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.8.6",
     "@supabase/ssr": "^0.0.8",
     "@supabase/supabase-js": "^2.38.4",
