--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen-types": "supabase gen types typescript --project-id azmbkqdqbnpwxwkchfpf > ./src/api/types.ts"
+    "gen-types": "supabase gen types typescript --project-id azmbkqdqbnpwxwkchfpf > ./src/api/schema.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
